<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/magnify"
        android:contentDescription="@string/telescope"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_title"
        android:text="@string/search_title"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/search_text_size"
        android:padding="@dimen/search_title_padding" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_title"
        android:paddingTop="@dimen/search_bar_textsize"
        android:background="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_soon"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:background="@color/whiteTransparent"
        android:textSize="@dimen/availablesoon_textsize"
        android:padding="@dimen/availablesoon_padding" />
</android.support.constraint.ConstraintLayout>